ESM-649: update logic between all the directives and controllers to allow upload and link document management in the same workflow (don't close link dialog on upload complete).

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -124,6 +124,7 @@
 					x-project="docBrowser.project"
            			x-artifact="docBrowser.artifact"
            			x-doc-location-code="docBrowser.docLocationCode"
+				    x-documents-control="docBrowser.documentsControl"
 					ng-if="docBrowser.project.userCan.createDocument"><span class="glyphicon glyphicon-open"></span><span>Upload Documents</span></a>
 			</div>
 		</div>
