--- a/modules/documents/client/views/partials/document-link.html
+++ b/modules/documents/client/views/partials/document-link.html
@@ -8,7 +8,8 @@
 	x-project="docLink.project"
 	x-artifact="docLink.artifact"
 	x-doc-location-code="{{docLink.docLocationCode}}"
-	x-allow-link='true'>
+	x-allow-link='true'
+    x-documents-control="docLink.documentsControl">
 </tmpl-documents-browser>
 <!-- / DOCUMENT BROWSER -->
 
