--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="modal-body">
-	<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project" x-doc-location-code="docLinkModal.docLocationCode" x-artifact="docLinkModal.artifact"></tmpl-documents-link>
+	<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project" x-doc-location-code="docLinkModal.docLocationCode" x-artifact="docLinkModal.artifact" x-documents-control="docLinkModal.documentsControl"></tmpl-documents-link>
 </div>
 
 <div class="modal-footer">
