--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -9,7 +9,8 @@
                 x-modal-document-link x-current="curVal" 
                 x-project="project" 
                 x-doc-location-code="docLocationCode" 
-                x-artifact="artifact">
+                x-artifact="artifact"
+                x-documents-control="documentsControl">
                 <span class="glyphicon glyphicon-link"></span><span>Link Document<span>
             </button>
         </div>
