--- a/modules/documents/client/views/partials/modal-document-upload-classify.html
+++ b/modules/documents/client/views/partials/modal-document-upload-classify.html
@@ -5,7 +5,7 @@
 	<h3 class="modal-title">Upload Documents</h3>
 </div>
 <div class="modal-body">
-	<tmpl-documents-upload-classify x-project="docUploadModal.project" x-type="project" x-doc-location-code="docUploadModal.docLocationCode" x-artifact="docUploadModal.artifact"></tmpl-documents-upload-classify>
+	<tmpl-documents-upload-classify x-project="docUploadModal.project" x-type="project" x-doc-location-code="docUploadModal.docLocationCode" x-artifact="docUploadModal.artifact" x-documents-control="docUploadModal.documentsControl"></tmpl-documents-upload-classify>
 </div>
 <div class="modal-footer">
 	<button ng-if="docUploadModal.uploading" disabled class="btn btn-default disabled" type="button">Cancel</button>
