ESM-651: set the size of the Invitations edit area.

--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -46,6 +46,7 @@
 						<label class="control-label">Message<em class="required">(Required)</em></label>
 						<textarea class="form-control" id="message" name="message"
 							ui-tinymce="tinymceOptions"
+							rows="10"
 							ng-model="s.communication.templateContent"
 							title="Message" required ng-blur="activeItem = false"></textarea>
 					</div>
