ESM-655: prevent double click on Add VC - was able to click > 1 when waiting for the VC to be created...

--- a/modules/vcs/client/views/topic-modal-select.html
+++ b/modules/vcs/client/views/topic-modal-select.html
@@ -23,8 +23,8 @@
 
 <div class="modal-footer">
 	<div>
-		<button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
-		<button class="btn btn-primary" href ng-click="self.ok()">Ok</button>
+		<button class="btn btn-default" href ng-click="self.cancel()" ng-disabled="self.cancelDisabled" >Cancel</button>
+		<button class="btn btn-primary" href ng-click="self.ok()" ng-disabled="self.okDisabled">Ok</button>
 	</div>
 </div>
 	
