Project Organization Setter fix.

--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -406,6 +406,7 @@
 					<button class="btn btn-default btn-sm" type="button"
 						x-org-search-chooser
 						x-title="'Set Organization'"
+						x-destination="project.proponent"
 						x-project="project">Set Organization</button>
 				</div>
 			</fieldset>
