PDF Viewer Design / Development

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -234,7 +234,7 @@
 							x-modal-pdf-viewer
 							x-pdfobject="filterSummary"
 							title="Open Document">
-							<span class="glyphicon glyphicon-eye-open"></span></div>
+							<span class="glyphicon glyphicon-new-window"></span></div>
 						<a class="btn btn-default btn-sm" href="/api/document/{{ filterSummary._id }}/fetch" target="_self" title="Download Document">
 							<span class="glyphicon glyphicon-download-alt"></span></a>
 						<a class="btn btn-default btn-sm" href ng-click="docBrowser.deleteDocument(filterSummary._id)" ng-if="(filterSummary.userCan.delete)" title="Delete Document">
