ESM-664 - Initial pass at implementing new document structure / markup / styling

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -5591,4 +5591,5 @@ tmpl-template-render {
 	}
 }
 
+@import "modules/documents/client/styles/file-browser.scss";
 @import "modules/documents/client/styles/pdf-viewer.scss";
