--- a/modules/documents/client/views/docs.html
+++ b/modules/documents/client/views/docs.html
@@ -2,6 +2,6 @@
 	<h1>Documents</h1>
 </div>
 
-<div class="view-body-container">
+<div class="view-body-container file-browser-container">
 	<x-document-mgr x-project="project" x-documents="documents" >
 </div>
