ESM-664: dirs/files in same list for UI. do not allow rename of dir when sibling exists with same name

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -30,36 +30,21 @@
 			Sortable Header
 		</div>
 		<ul>
-			<li class="folder clickable" ng-repeat="node in documentMgr.currentNode.children"
-				ng-click="documentMgr.selectNode(node.model.id)">
-				<span class="cell-contents">
+			<li class="folder clickable" ng-repeat="doc in documentMgr.directoryContents">
+				<span class="cell-contents" ng-if="doc.type === 'folder'" ng-click="documentMgr.selectNode(doc.contents.model.id)">
 					<span class="avatar">
 						<span class="glyphicon glyphicon-folder-close"></span>
 					</span>
-					<span class="name">{{ node.model.name }}</span>
+					<span class="name">{{ doc.name }}</span>
+				</span>
+				<span class="cell-contents" ng-if="doc.type === 'file'">
+					<span class="avatar">
+						<span class="glyphicon glyphicon-file"></span>
+					</span>
+					<span class="name">{{ doc.name | removeExtension }}</span>
 				</span>
 			</li>
 		</ul>
 	</div>
-
-<!--
-	<div class="panel panel-default">
-		<div class="col-sm-6 col-md-4 file-browser-list">
-			<ul>
-				<li class="row-folder clickable" ng-repeat="node in documentMgr.currentNode.children"
-					ng-click="documentMgr.selectNode(node.model.id)">
-					<span class="glyphicon glyphicon-folder"></span>
-					{{ node.model.name }}
-				</li>
-			</ul>
-			<ul>
-				<li class="row-folder clickable" ng-repeat="doc in documentMgr.currentDocuments">
-					<span class="glyphicon glyphicon-file"></span>
-					{{ doc.internalOriginalName | removeExtension }}
-				</li>
-			</ul>
-		</div>
-	</div>
--->
 
 </div>
