--- a/modules/documents/client/views/document-manager-add.html
+++ b/modules/documents/client/views/document-manager-add.html
@@ -6,13 +6,13 @@
 		<span aria-hidden="true">&times;</span>
 	</button>
     
-    <h3 class="modal-title">Add Folder</h3>
+    <h3 class="modal-title">{{addFolder.title}}</h3>
 </div>
 
 <div class="modal-body">
     <div class="form-group">
         <label class="control-label">Folder Name</label>
-        <input class="form-control" type="text" />
+        <input class="form-control" ng-model="addFolder.entryText" type="text" />
     </div>
 </div>
 
@@ -22,6 +22,6 @@
     <button class="btn btn-default" type="button" ng-click="addFolder.cancel()">Cancel</button>
 
     <!-- Disabled until something is entered into the input field -->
-    <button class="btn btn-primary" ng-if="addFolder.valid" ng-click=" " disabled>OK</button>
+    <button class="btn btn-primary" ng-click="addFolder.ok()" ng-disabled="addFolder.entryText === ''">OK</button>
 
 </div>
