--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -19,6 +19,12 @@
   flex-direction: $values;
 }
 
+@mixin userselect($values) {
+    -webkit-user-select: $values;
+    -ms-user-select: $values;
+    user-select: $values;
+}
+
 
 /* UTILITY SELECTORS */
 .text-align-right {
@@ -73,7 +79,6 @@ $file-browser-file-color: #96c0e6;
             + li {
                 &:before {
                     display: inline-block;
-                    margin-top: 1px;
                     margin-left: 4px;
                     font-size: 2.3rem;
                     vertical-align: middle;
@@ -91,9 +96,8 @@ $file-browser-file-color: #96c0e6;
         }
 
         .btn {
-            height: 3.4rem;
+            height: 3.2rem;
             padding: 0.6rem;
-            font-size: 1.6rem;
             font-weight: normal;
             color: $file-browser-breadcrumb-color;
             background: transparent;
@@ -109,18 +113,25 @@ $file-browser-file-color: #96c0e6;
         }
     }
 
-    .header-actions {
+    .file-batch-actions {
         @include flex(0 0 auto);
+
+        .btn {
+            height: 3.2rem;
+        }
     }
 }
 
 .file-browser-body {
+    @include flexbox();
+    @include flexdirection(column);
     @include flex(1 1 auto);
     background: $file-browser-bg;
 
     .column-header {
         @include flexbox();
         @include flexdirection(row);
+        @include flex(0 0 auto);
         font-size: 1.2rem;
         font-weight: bold;
         background: $file-browser-table-header-bg;
@@ -129,7 +140,7 @@ $file-browser-file-color: #96c0e6;
             @include flex(1 1 auto);
             padding: 1rem 1.5rem;
 
-            .sortable {
+            &.sortable {
                 &:hover {
                     background: $file-browser-table-header-hover-bg;
                 }
@@ -156,22 +167,18 @@ $file-browser-file-color: #96c0e6;
         }
     }
 
+    .scroll-container {
+        @include flex(1 1 auto);
+        position: relative;
+    }
+
     li {
         border-bottom: $file-browser-row-border;
-
-        &.selected {
-            color: #FFF;
-            background: #96c0e6;
-            border-bottom-color: #96c0e6;
-
-            .glyphicon {
-                color: #FFF;
-            }
-        }
     }
 
     .cell-contents {
         @include flexbox();
+        @include userselect(none);
         padding: 0.75rem 1.5rem;
 
         span {
@@ -188,9 +195,20 @@ $file-browser-file-color: #96c0e6;
             margin-right: 0.75rem;
             text-align: center;
         }
+
+        &.selected {
+            color: #FFF;
+            background: #5091cd;
+            border-bottom-color: #4187c9;
+
+            .glyphicon {
+                color: #FFF;
+            }
+        }
+
     }
 
-    .folder {
+    .fb-folder {
         .glyphicon {
             margin-top: 0.2rem;
             font-size: 2.1rem;
@@ -198,12 +216,16 @@ $file-browser-file-color: #96c0e6;
         }
     }
 
-    .file {
+    .fb-file {
         .glyphicon {
             margin-top: 0.4rem;
             font-size: 1.8rem;
             color: $file-browser-file-color;
         }
+    }
+
+    .empty-directory-msg {
+        padding: 1.5rem;
     }
 }
 
@@ -211,6 +233,7 @@ $file-browser-file-color: #96c0e6;
 /* COLUMNS */
 .date-added-col {
     @extend .text-align-right;
+    max-width: 25%;
 }
 
 
