--- a/modules/documents/client/views/document-manager-add.html
+++ b/modules/documents/client/views/document-manager-add.html
@@ -5,13 +5,12 @@
     <button class="btn btn-default close" type="button" ng-click="addFolder.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-    
     <h3 class="modal-title">{{addFolder.title}}</h3>
 </div>
 
 <div class="modal-body">
     <div class="form-group">
-        <label class="control-label">Folder Name</label>
+        <label class="control-label">Enter a Folder Name</label>
         <input class="form-control" ng-model="addFolder.entryText" type="text" />
     </div>
 </div>
