--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -11,24 +11,19 @@
 		</ul>
 		
 		<div class="file-batch-actions">
-			<button class="btn btn-default btn-sm"
-					href
-					x-document-mgr-add-folder x-project="project" x-node="documentMgr.currentNode"
+			<button class="btn btn-default"
+					x-document-mgr-add-folder x-project="project"
+					x-node="documentMgr.currentNode"
 				    title="Add Folder">Add</button>
-			<button class="btn btn-default btn-sm"
-					href
-					x-document-mgr-rename-folder x-project="project" x-node="documentMgr.currentNode"
+			<button class="btn btn-default" 
+					x-document-mgr-rename-folder
+					x-project="project"
+					x-node="documentMgr.currentNode"
+					ng-disabled="documentMgr.currentNode == 'ROOT'"
 					title="Rename Folder">Rename</button>
 		</div>
 
 	</div>
-
-	<script>
-		function toggleSelected() {
-			$( this ).toggleClass( "selected" );
-			alert: 'blahhhh';
-		};
-	</script>
 
 	<div class="file-browser-body">
 		<div class="column-header">
@@ -39,29 +34,38 @@
 			<div class="col date-added-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
 				<span>Date Added</span>
 			</div>
+			<div class="col date-added-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
+				<span>File Size</span>
+			</div>
 		</div>
 		<!-- Folders / Directories -->
-		<ul>
-			<li class="folder clickable" ng-repeat="doc in documentMgr.currentDirs">
-				<span class="cell-contents" ng-click="documentMgr.singleClick(doc.model.id)" ng-dblclick="documentMgr.doubleClick(doc.model.id)">
-					<span class="avatar">
-						<span class="glyphicon glyphicon-folder-close"></span>
+		<div class="scroll-container">
+			<div class="empty-directory-msg" ng-if="documentMgr.currentDirs.length == 0 && documentMgr.currentFiles.length == 0">This folder is empty.</div>
+			<ul>
+				<li class="fb-folder clickable" ng-repeat="doc in documentMgr.currentDirs">
+					<span class="cell-contents" ng-dblclick="documentMgr.doubleClick(doc.model.id)">
+						<span class="avatar">
+							<span class="glyphicon glyphicon-folder-close"></span>
+						</span>
+						<span>{{ doc.model.name }}</span>
+						<span class="date-added-col">—</span>
+						<span class="date-added-col">—</span>
 					</span>
-					<span>{{ doc.model.name }}</span>
-				</span>
-			</li>
-		</ul>
-		<ul>
-			<li class="file" ng-repeat="doc in documentMgr.currentFiles">
-				<span class="cell-contents">
-					<span class="avatar">
-						<span class="glyphicon glyphicon-file"></span>
+				</li>
+			</ul>
+			<ul>
+				<li class="fb-file" ng-repeat="doc in documentMgr.currentFiles">
+					<span class="cell-contents">
+						<span class="avatar">
+							<span class="glyphicon glyphicon-file"></span>
+						</span>
+						<span>{{ doc.internalOriginalName | removeExtension }}</span>
+						<span class="date-added-col">{{ doc.dateAdded | date : format : timezone }}{{ doc.updatedBy.username }}</span>
+						<span class="date-added-col">{{ doc.internalSize }}</span>
 					</span>
-					<span>{{ doc.internalOriginalName | removeExtension }}</span>
-					<span class="date-added-col">{{ doc.dateAdded | date : format : timezone }}</span>
-				</span>
-			</li>
-		</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
 
 </div>
